# potluck

./: .gitignore  LICENSE  README.md  WIRING.md  potluck  pyproject.toml  setup.sh  test  verify.sh.example
.claude/: drift-11a-acceptance.md  drift-11a-spec.md  drift-12-acceptance.md  drift-12-spec.md  drift-13-acceptance.md  drift-13-spec.md  verify.sh
base/commands/: bugfix.md  harness-bugfix.md  potluck-bugfix.md  potluck.md
base/hooks/: pre-tool-secret-scan.py
base/rules/: no-gate-tampering.md  no-skip-verify.md
docs/: observations.md
docs/notes/: board-repair-codex-review.md
docs/proposals/: TASK-deferred-failure-hedge-sweep.md  TASK-reprompt-on-contract-violation.md  TASK-stub-seam-sweep.md
docs/reviews/: reviewgate-code-review.md  reviewgate-slice-receipt.md
harness/: cli.py  config.py  hook_setup.py  orchestrator.py  paths.py  reprompt_fixtures.py  resolve.py  runner.py  schemas.py  test_call_and_parse.py  test_closure.py  test_contract_tail.py  test_hook_setup.py  test_orchestrator.py  test_prompt_packing.py  test_real_gate.py  test_reprompt.py  test_resolve.py  test_reviewgate_vendor.py  test_runner.py
harness/_vendor/: reviewgate.py
profiles/ci/: profile.toml
profiles/personal/: profile.toml
profiles/phi/: profile.toml
